unpackaged/main/default/objects/ETT_Delivery_Line_Item__c/ETT_Delivery_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Delivery Line Item</label>
    <nameField>
        <displayFormat>DLN-{0000}</displayFormat>
        <label>Delivery Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>