unpackaged/main/default/objects/ETT_Delivery_Line_Item__c/fields/ETT_Brand_Master__c.field-meta.xml
<CustomField>
    <fullName>ETT_Brand_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand Master</label>
    <referenceTo>ETT_Brand_Master__c</referenceTo>
    <relationshipLabel>Delivery Line Items</relationshipLabel>
    <relationshipName>Delivery_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>