unpackaged/main/default/objects/ETT_Delivery_Line_Item__c/fields/ETT_Delivery_Note__c.field-meta.xml
<CustomField>
    <fullName>ETT_Delivery_Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Note</label>
    <referenceTo>ETT_Delivery_Note__c</referenceTo>
    <relationshipLabel>Delivery Line Items</relationshipLabel>
    <relationshipName>Delivery_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>