unpackaged/main/default/objects/ETT_Delivery_Line_Item__c/fields/ETT_Is_Checked__c.field-meta.xml
<CustomField>
    <fullName>ETT_Is_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Checked</label>
    <type>Checkbox</type>
</CustomField>