unpackaged/main/default/objects/ETT_Delivery_Line_Item__c/fields/ETT_Job_Type__c.field-meta.xml
<CustomField>
    <fullName>ETT_Job_Type__c</fullName>
    <label>Job Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retread</fullName>
            </value>
            <value>
                <fullName>Send Back</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>