unpackaged/main/default/objects/ETT_Delivery_Line_Item__c/fields/ETT_Prepared_By__c.field-meta.xml
<CustomField>
    <fullName>ETT_Prepared_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prepared By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Delivery_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>