unpackaged/main/default/objects/ETT_Delivery_Line_Item__c/fields/ETT_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>ETT_Received_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Received Date</label>
    <type>Date</type>
</CustomField>