unpackaged/main/default/objects/ETT_Delivery_Line_Item__c/fields/ETT_Receiver_Designation__c.field-meta.xml
<CustomField>
    <fullName>ETT_Receiver_Designation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Receiver Designation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>