unpackaged/main/default/objects/ETT_Delivery_Line_Item__c/fields/ETT_Tread_Pattern__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tread_Pattern__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tread Pattern</label>
    <referenceTo>ETT_Pattern_Master__c</referenceTo>
    <relationshipLabel>Delivery Line Items (Tread Pattern)</relationshipLabel>
    <relationshipName>Delivery_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>