unpackaged/main/default/objects/ETT_Delivery_Line_Item__c/fields/ETT_Tyre_Size__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tyre_Size__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tyre Size</label>
    <referenceTo>ETT_Tyre_Size_Master__c</referenceTo>
    <relationshipLabel>Delivery Line Items</relationshipLabel>
    <relationshipName>Delivery_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>