unpackaged/main/default/objects/ETT_Delivery_Line_Item__c/fields/ETT_Vehicle_Number__c.field-meta.xml
<CustomField>
    <fullName>ETT_Vehicle_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Number</label>
    <referenceTo>ETT_Vehicle_Details__c</referenceTo>
    <relationshipLabel>Delivery Line Items</relationshipLabel>
    <relationshipName>Delivery_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>