unpackaged/main/default/objects/ETT_Delivery_Line_Item__c/fields/Tyre_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Tyre_Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tyre Inventory</label>
    <referenceTo>ETT_Tyre_Inventory__c</referenceTo>
    <relationshipLabel>Delivery Line Items</relationshipLabel>
    <relationshipName>Delivery_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>